integrated in order

--- a/admin/src/Pages/Dashboard/Dashboard.css
+++ b/admin/src/Pages/Dashboard/Dashboard.css
@@ -46,7 +46,7 @@
   
   .dashboard-card i {
     font-size: 2rem; /* Increased icon size */
-    color: #704824;
+    color: #9810fa;
     margin-bottom: 15px;
   }
   
